--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2055,7 +2055,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a43c23bc",
+   "id": "ae3c3307",
    "metadata": {},
    "outputs": [
     {
@@ -2185,7 +2185,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "e6b5cf6a",
+   "id": "fced21b3",
    "metadata": {},
    "outputs": [
     {
@@ -2223,7 +2223,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "aa77c34d",
+   "id": "f5a3d0f6",
    "metadata": {},
    "outputs": [
     {
@@ -2262,7 +2262,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "2934a5f7",
+   "id": "c6fc702a",
    "metadata": {},
    "outputs": [
     {
@@ -2300,7 +2300,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "dadde9a1",
+   "id": "8542908e",
    "metadata": {},
    "outputs": [
     {
@@ -2339,7 +2339,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "5894805a",
+   "id": "8f40894e",
    "metadata": {},
    "outputs": [
     {
@@ -2377,7 +2377,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "82c09c57",
+   "id": "6994462f",
    "metadata": {},
    "outputs": [
     {
@@ -2406,7 +2406,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "71cfd75f",
+   "id": "88f24b2d",
    "metadata": {},
    "outputs": [
     {
@@ -2639,7 +2639,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "44283e3d",
+   "id": "5a0123ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2651,7 +2651,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "efa1e14c",
+   "id": "27863156",
    "metadata": {},
    "outputs": [
     {
@@ -2794,7 +2794,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "edbb54cd",
+   "id": "38ee6c03",
    "metadata": {},
    "outputs": [
     {
@@ -2834,7 +2834,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "b9e32b30",
+   "id": "82662e38",
    "metadata": {},
    "outputs": [
     {
@@ -2873,7 +2873,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "3ff93816",
+   "id": "aa26da56",
    "metadata": {},
    "outputs": [
     {
@@ -3015,7 +3015,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "e6c2dcc5",
+   "id": "77649706",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3026,7 +3026,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "b07a497c",
+   "id": "621df309",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3037,7 +3037,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "47f965fa",
+   "id": "782779ca",
    "metadata": {},
    "outputs": [
     {
@@ -3073,7 +3073,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "463eaf07",
+   "id": "24fb373e",
    "metadata": {},
    "outputs": [
     {
@@ -3226,7 +3226,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "de4acdee",
+   "id": "cfc53593",
    "metadata": {},
    "outputs": [
     {
@@ -3373,7 +3373,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "d08af1bc",
+   "id": "ff426e42",
    "metadata": {},
    "outputs": [
     {
@@ -3522,7 +3522,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c63bf03e",
+   "id": "1fbd8481",
    "metadata": {},
    "outputs": [
     {
@@ -3666,7 +3666,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "fc0028fa",
+   "id": "211386a0",
    "metadata": {},
    "outputs": [
     {
@@ -3809,8 +3809,469 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "id": "92b3d181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a grade level DataFrames.\n",
+    "ninth_graders = school_data_complete_df[(school_data_complete_df[\"grade\"] == \"9th\")]\n",
+    "tenth_graders = school_data_complete_df[(school_data_complete_df[\"grade\"] == \"10th\")]\n",
+    "eleventh_graders = school_data_complete_df[(school_data_complete_df[\"grade\"] == \"11th\")]\n",
+    "twelfth_graders = school_data_complete_df[(school_data_complete_df[\"grade\"] == \"12th\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "5792d491",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group each grade level DataFrame by the school name for the average math score.\n",
+    "ninth_grade_math_scores = ninth_graders.groupby([\"school_name\"]).mean()[\"math_score\"]\n",
+    "tenth_grade_math_scores = tenth_graders.groupby([\"school_name\"]).mean()[\"math_score\"]\n",
+    "eleventh_grade_math_scores = eleventh_graders.groupby([\"school_name\"]).mean()[\"math_score\"]\n",
+    "twelfth_grade_math_scores = twelfth_graders.groupby([\"school_name\"]).mean()[\"math_score\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "19c72adf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group each grade level DataFrame by the school name for the average reading score.\n",
+    "ninth_grade_reading_scores = ninth_graders.groupby([\"school_name\"]).mean()[\"reading_score\"]\n",
+    "tenth_grade_reading_scores = tenth_graders.groupby([\"school_name\"]).mean()[\"reading_score\"]\n",
+    "eleventh_grade_reading_scores = eleventh_graders.groupby([\"school_name\"]).mean()[\"reading_score\"]\n",
+    "twelfth_grade_reading_scores = twelfth_graders.groupby([\"school_name\"]).mean()[\"reading_score\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "6199b247",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>9th</th>\n",
+       "      <th>10th</th>\n",
+       "      <th>11th</th>\n",
+       "      <th>12th</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>77.083676</td>\n",
+       "      <td>76.996772</td>\n",
+       "      <td>77.515588</td>\n",
+       "      <td>76.492218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>83.094697</td>\n",
+       "      <td>83.154506</td>\n",
+       "      <td>82.765560</td>\n",
+       "      <td>83.277487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>76.403037</td>\n",
+       "      <td>76.539974</td>\n",
+       "      <td>76.884344</td>\n",
+       "      <td>77.151369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>77.361345</td>\n",
+       "      <td>77.672316</td>\n",
+       "      <td>76.918058</td>\n",
+       "      <td>76.179963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>82.044010</td>\n",
+       "      <td>84.229064</td>\n",
+       "      <td>83.842105</td>\n",
+       "      <td>83.356164</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            9th       10th       11th       12th\n",
+       "school_name                                                     \n",
+       "Bailey High School    77.083676  76.996772  77.515588  76.492218\n",
+       "Cabrera High School   83.094697  83.154506  82.765560  83.277487\n",
+       "Figueroa High School  76.403037  76.539974  76.884344  77.151369\n",
+       "Ford High School      77.361345  77.672316  76.918058  76.179963\n",
+       "Griffin High School   82.044010  84.229064  83.842105  83.356164"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Combine each grade level Series for average math scores by school into a single DataFrame.\n",
+    "math_scores_by_grade = pd.DataFrame({\n",
+    "               \"9th\": ninth_grade_math_scores,\n",
+    "               \"10th\": tenth_grade_math_scores,\n",
+    "               \"11th\": eleventh_grade_math_scores,\n",
+    "               \"12th\": twelfth_grade_math_scores})\n",
+    "\n",
+    "math_scores_by_grade.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "f49bb136",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>9th</th>\n",
+       "      <th>10th</th>\n",
+       "      <th>11th</th>\n",
+       "      <th>12th</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>81.303155</td>\n",
+       "      <td>80.907183</td>\n",
+       "      <td>80.945643</td>\n",
+       "      <td>80.912451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>83.676136</td>\n",
+       "      <td>84.253219</td>\n",
+       "      <td>83.788382</td>\n",
+       "      <td>84.287958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>81.198598</td>\n",
+       "      <td>81.408912</td>\n",
+       "      <td>80.640339</td>\n",
+       "      <td>81.384863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>80.632653</td>\n",
+       "      <td>81.262712</td>\n",
+       "      <td>80.403642</td>\n",
+       "      <td>80.662338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>83.369193</td>\n",
+       "      <td>83.706897</td>\n",
+       "      <td>84.288089</td>\n",
+       "      <td>84.013699</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            9th       10th       11th       12th\n",
+       "school_name                                                     \n",
+       "Bailey High School    81.303155  80.907183  80.945643  80.912451\n",
+       "Cabrera High School   83.676136  84.253219  83.788382  84.287958\n",
+       "Figueroa High School  81.198598  81.408912  80.640339  81.384863\n",
+       "Ford High School      80.632653  81.262712  80.403642  80.662338\n",
+       "Griffin High School   83.369193  83.706897  84.288089  84.013699"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Combine each grade level Series for average reading scores by school into a single DataFrame.\n",
+    "reading_scores_by_grade = pd.DataFrame({\n",
+    "              \"9th\": ninth_grade_reading_scores,\n",
+    "              \"10th\": tenth_grade_reading_scores,\n",
+    "              \"11th\": eleventh_grade_reading_scores,\n",
+    "              \"12th\": twelfth_grade_reading_scores})\n",
+    "\n",
+    "reading_scores_by_grade.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "19d64ef9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>9th</th>\n",
+       "      <th>10th</th>\n",
+       "      <th>11th</th>\n",
+       "      <th>12th</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>77.1</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>77.5</td>\n",
+       "      <td>76.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>83.1</td>\n",
+       "      <td>83.2</td>\n",
+       "      <td>82.8</td>\n",
+       "      <td>83.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>76.4</td>\n",
+       "      <td>76.5</td>\n",
+       "      <td>76.9</td>\n",
+       "      <td>77.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>77.4</td>\n",
+       "      <td>77.7</td>\n",
+       "      <td>76.9</td>\n",
+       "      <td>76.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>82.0</td>\n",
+       "      <td>84.2</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       9th  10th  11th  12th\n",
+       "Bailey High School    77.1  77.0  77.5  76.5\n",
+       "Cabrera High School   83.1  83.2  82.8  83.3\n",
+       "Figueroa High School  76.4  76.5  76.9  77.2\n",
+       "Ford High School      77.4  77.7  76.9  76.2\n",
+       "Griffin High School   82.0  84.2  83.8  83.4"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "  # Format each grade column.\n",
+    "  math_scores_by_grade[\"9th\"] = math_scores_by_grade[\"9th\"].map(\"{:.1f}\".format)\n",
+    "  math_scores_by_grade[\"10th\"] = math_scores_by_grade[\"10th\"].map(\"{:.1f}\".format)\n",
+    "  math_scores_by_grade[\"11th\"] = math_scores_by_grade[\"11th\"].map(\"{:.1f}\".format)\n",
+    "  math_scores_by_grade[\"12th\"] = math_scores_by_grade[\"12th\"].map(\"{:.1f}\".format)\n",
+    "  # Make sure the columns are in the correct order.\n",
+    "  math_scores_by_grade = math_scores_by_grade[\n",
+    "                 [\"9th\", \"10th\", \"11th\", \"12th\"]]\n",
+    "\n",
+    "  # Remove the index name.\n",
+    "  math_scores_by_grade.index.name = None\n",
+    "  # Display the DataFrame.\n",
+    "  math_scores_by_grade.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "d9673acb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>9th</th>\n",
+       "      <th>10th</th>\n",
+       "      <th>11th</th>\n",
+       "      <th>12th</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>81.3</td>\n",
+       "      <td>80.9</td>\n",
+       "      <td>80.9</td>\n",
+       "      <td>80.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>83.7</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>84.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>81.2</td>\n",
+       "      <td>81.4</td>\n",
+       "      <td>80.6</td>\n",
+       "      <td>81.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>80.6</td>\n",
+       "      <td>81.3</td>\n",
+       "      <td>80.4</td>\n",
+       "      <td>80.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>83.4</td>\n",
+       "      <td>83.7</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>84.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       9th  10th  11th  12th\n",
+       "Bailey High School    81.3  80.9  80.9  80.9\n",
+       "Cabrera High School   83.7  84.3  83.8  84.3\n",
+       "Figueroa High School  81.2  81.4  80.6  81.4\n",
+       "Ford High School      80.6  81.3  80.4  80.7\n",
+       "Griffin High School   83.4  83.7  84.3  84.0"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "  # Format each grade column.\n",
+    "  reading_scores_by_grade[\"9th\"] = reading_scores_by_grade[\"9th\"].map(\"{:,.1f}\".format)\n",
+    "  reading_scores_by_grade[\"10th\"] = reading_scores_by_grade[\"10th\"].map(\"{:,.1f}\".format)\n",
+    "  reading_scores_by_grade[\"11th\"] = reading_scores_by_grade[\"11th\"].map(\"{:,.1f}\".format)\n",
+    "  reading_scores_by_grade[\"12th\"] = reading_scores_by_grade[\"12th\"].map(\"{:,.1f}\".format)\n",
+    "\n",
+    "  # Make sure the columns are in the correct order.\n",
+    "  reading_scores_by_grade = reading_scores_by_grade[\n",
+    "                 [\"9th\", \"10th\", \"11th\", \"12th\"]]\n",
+    "\n",
+    "  # Remove the index name.\n",
+    "  reading_scores_by_grade.index.name = None\n",
+    "  # Display the data frame.\n",
+    "  reading_scores_by_grade.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2ce2142a",
+   "id": "d6c03ffb",
    "metadata": {},
    "outputs": [],
    "source": []
