--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2055,7 +2055,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "aae46da5",
+   "id": "cbad97cf",
    "metadata": {},
    "outputs": [
     {
@@ -2185,7 +2185,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "65b59c09",
+   "id": "3b152f5e",
    "metadata": {},
    "outputs": [
     {
@@ -2223,7 +2223,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "26b8a2d8",
+   "id": "17e7a298",
    "metadata": {},
    "outputs": [
     {
@@ -2262,7 +2262,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e746e3c2",
+   "id": "339e7375",
    "metadata": {},
    "outputs": [
     {
@@ -2300,7 +2300,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "295c3bbe",
+   "id": "071eada8",
    "metadata": {},
    "outputs": [
     {
@@ -2339,7 +2339,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "4342a392",
+   "id": "f8ebcd17",
    "metadata": {},
    "outputs": [
     {
@@ -2377,7 +2377,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "19c47e31",
+   "id": "fc508128",
    "metadata": {},
    "outputs": [
     {
@@ -2406,7 +2406,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a9a965ef",
+   "id": "b0582ce7",
    "metadata": {},
    "outputs": [
     {
@@ -2639,7 +2639,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "5c4343b4",
+   "id": "e8fb2b88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2651,7 +2651,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "8f44591d",
+   "id": "5c1e2626",
    "metadata": {},
    "outputs": [
     {
@@ -2794,7 +2794,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "9979df33",
+   "id": "068f37ec",
    "metadata": {},
    "outputs": [
     {
@@ -2834,7 +2834,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "5f3b7591",
+   "id": "02b6a1ab",
    "metadata": {},
    "outputs": [
     {
@@ -2873,7 +2873,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "398bd170",
+   "id": "ed405e31",
    "metadata": {},
    "outputs": [
     {
@@ -3015,7 +3015,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "69851dd5",
+   "id": "e9613331",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3026,7 +3026,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "5b0ebc06",
+   "id": "a8e83754",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3037,7 +3037,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "332187fe",
+   "id": "0fc048cd",
    "metadata": {},
    "outputs": [
     {
@@ -3073,7 +3073,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "b35ae18e",
+   "id": "4f751a99",
    "metadata": {},
    "outputs": [
     {
@@ -3226,7 +3226,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "531b7e28",
+   "id": "42d89a6d",
    "metadata": {},
    "outputs": [
     {
@@ -3373,7 +3373,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "a25b5ee5",
+   "id": "86d385da",
    "metadata": {},
    "outputs": [
     {
@@ -3522,7 +3522,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "ceb72664",
+   "id": "9246b9e1",
    "metadata": {},
    "outputs": [
     {
@@ -3666,7 +3666,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "ce359457",
+   "id": "f5113235",
    "metadata": {},
    "outputs": [
     {
@@ -3810,7 +3810,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "6911198b",
+   "id": "7489efa2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3824,7 +3824,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "4b3681f4",
+   "id": "121c18de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3838,7 +3838,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "3f8d031a",
+   "id": "d27b6111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3852,7 +3852,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "7d154f2d",
+   "id": "60920878",
    "metadata": {},
    "outputs": [
     {
@@ -3958,7 +3958,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "04916925",
+   "id": "b0e98a54",
    "metadata": {},
    "outputs": [
     {
@@ -4064,7 +4064,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "9b7a703e",
+   "id": "d0899e43",
    "metadata": {},
    "outputs": [
     {
@@ -4167,7 +4167,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "e1a9b351",
+   "id": "be341748",
    "metadata": {},
    "outputs": [
     {
@@ -4271,7 +4271,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "baeba1ed",
+   "id": "45ccfb53",
    "metadata": {},
    "outputs": [
     {
@@ -4301,7 +4301,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "4e92c739",
+   "id": "6fb1daf0",
    "metadata": {},
    "outputs": [
     {
@@ -4340,7 +4340,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "c5f21ee8",
+   "id": "613aa313",
    "metadata": {},
    "outputs": [
     {
@@ -4367,7 +4367,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "96507169",
+   "id": "94d29581",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4379,7 +4379,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "387bca97",
+   "id": "5787d42a",
    "metadata": {},
    "outputs": [
     {
@@ -4716,7 +4716,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "14b37fd9",
+   "id": "e7fe1f61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4731,7 +4731,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "314bb8a6",
+   "id": "dacac3d2",
    "metadata": {},
    "outputs": [
     {
@@ -4757,7 +4757,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "25c5ead8",
+   "id": "818904b3",
    "metadata": {},
    "outputs": [
     {
@@ -4876,7 +4876,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "a69bb301",
+   "id": "8f72f011",
    "metadata": {},
    "outputs": [
     {
@@ -4993,11 +4993,317 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a1edc075",
+   "execution_count": 91,
+   "id": "2fe2f9ac",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Establish the bins.\n",
+    "size_bins = [0, 999, 1999, 5000]\n",
+    "group_names = [\"Small (<1000)\", \"Medium (1000-1999)\", \"Large (2000-5000)\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "8290cc7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "      <th>Spending Ranges (Per Student)</th>\n",
+       "      <th>School Size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4976</td>\n",
+       "      <td>$3,124,928.00</td>\n",
+       "      <td>$628.00</td>\n",
+       "      <td>77.048432</td>\n",
+       "      <td>81.033963</td>\n",
+       "      <td>66.680064</td>\n",
+       "      <td>81.933280</td>\n",
+       "      <td>54.642283</td>\n",
+       "      <td>$586-630</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "      <td>&lt;$586</td>\n",
+       "      <td>Medium (1000-1999)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "      <td>$631-645</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2739</td>\n",
+       "      <td>$1,763,916.00</td>\n",
+       "      <td>$644.00</td>\n",
+       "      <td>77.102592</td>\n",
+       "      <td>80.746258</td>\n",
+       "      <td>68.309602</td>\n",
+       "      <td>79.299014</td>\n",
+       "      <td>54.289887</td>\n",
+       "      <td>$631-645</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "      <td>$586-630</td>\n",
+       "      <td>Medium (1000-1999)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     School Type  Total Students Total School Budget  \\\n",
+       "Bailey High School      District            4976       $3,124,928.00   \n",
+       "Cabrera High School      Charter            1858       $1,081,356.00   \n",
+       "Figueroa High School    District            2949       $1,884,411.00   \n",
+       "Ford High School        District            2739       $1,763,916.00   \n",
+       "Griffin High School      Charter            1468         $917,500.00   \n",
+       "\n",
+       "                     Per Student Budget  Average Math Score  \\\n",
+       "Bailey High School              $628.00           77.048432   \n",
+       "Cabrera High School             $582.00           83.061895   \n",
+       "Figueroa High School            $639.00           76.711767   \n",
+       "Ford High School                $644.00           77.102592   \n",
+       "Griffin High School             $625.00           83.351499   \n",
+       "\n",
+       "                      Average Reading Score  % Passing Math  \\\n",
+       "Bailey High School                81.033963       66.680064   \n",
+       "Cabrera High School               83.975780       94.133477   \n",
+       "Figueroa High School              81.158020       65.988471   \n",
+       "Ford High School                  80.746258       68.309602   \n",
+       "Griffin High School               83.816757       93.392371   \n",
+       "\n",
+       "                      % Passing Reading  % Overall Passing  \\\n",
+       "Bailey High School            81.933280          54.642283   \n",
+       "Cabrera High School           97.039828          91.334769   \n",
+       "Figueroa High School          80.739234          53.204476   \n",
+       "Ford High School              79.299014          54.289887   \n",
+       "Griffin High School           97.138965          90.599455   \n",
+       "\n",
+       "                     Spending Ranges (Per Student)         School Size  \n",
+       "Bailey High School                        $586-630   Large (2000-5000)  \n",
+       "Cabrera High School                          <$586  Medium (1000-1999)  \n",
+       "Figueroa High School                      $631-645   Large (2000-5000)  \n",
+       "Ford High School                          $631-645   Large (2000-5000)  \n",
+       "Griffin High School                       $586-630  Medium (1000-1999)  "
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Categorize spending based on the bins.\n",
+    "per_school_summary_df[\"School Size\"] = pd.cut(per_school_summary_df[\"Total Students\"], size_bins, labels=group_names)\n",
+    "\n",
+    "per_school_summary_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "90b4d132",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "size_math_scores = per_school_summary_df.groupby([\"School Size\"]).mean()[\"Average Math Score\"]\n",
+    "size_reading_scores = per_school_summary_df.groupby([\"School Size\"]).mean()[\"Average Reading Score\"]\n",
+    "size_passing_math = per_school_summary_df.groupby([\"School Size\"]).mean()[\"% Passing Math\"]\n",
+    "size_passing_reading = per_school_summary_df.groupby([\"School Size\"]).mean()[\"% Passing Reading\"]\n",
+    "size_overall_passing = per_school_summary_df.groupby([\"School Size\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "8900dc74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Size</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Small (&lt;1000)</th>\n",
+       "      <td>83.821598</td>\n",
+       "      <td>83.929843</td>\n",
+       "      <td>93.550225</td>\n",
+       "      <td>96.099437</td>\n",
+       "      <td>89.883853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medium (1000-1999)</th>\n",
+       "      <td>83.374684</td>\n",
+       "      <td>83.864438</td>\n",
+       "      <td>93.599695</td>\n",
+       "      <td>96.790680</td>\n",
+       "      <td>90.621535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Large (2000-5000)</th>\n",
+       "      <td>77.746417</td>\n",
+       "      <td>81.344493</td>\n",
+       "      <td>69.963361</td>\n",
+       "      <td>82.766634</td>\n",
+       "      <td>58.286003</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Size                                                                     \n",
+       "Small (<1000)                83.821598              83.929843       93.550225   \n",
+       "Medium (1000-1999)           83.374684              83.864438       93.599695   \n",
+       "Large (2000-5000)            77.746417              81.344493       69.963361   \n",
+       "\n",
+       "                    % Passing Reading  % Overall Passing  \n",
+       "School Size                                               \n",
+       "Small (<1000)               96.099437          89.883853  \n",
+       "Medium (1000-1999)          96.790680          90.621535  \n",
+       "Large (2000-5000)           82.766634          58.286003  "
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "size_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : size_math_scores,\n",
+    "          \"Average Reading Score\": size_reading_scores,\n",
+    "          \"% Passing Math\": size_passing_math,\n",
+    "          \"% Passing Reading\": size_passing_reading,\n",
+    "          \"% Overall Passing\": size_overall_passing})\n",
+    "\n",
+    "size_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3370a948",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Formatting.\n",
+    "size_summary_df[\"Average Math Score\"] = size_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "size_summary_df[\"Average Reading Score\"] = size_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "size_summary_df[\"% Passing Math\"] = size_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "size_summary_df[\"% Passing Reading\"] = size_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "size_summary_df[\"% Overall Passing\"] = size_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "size_summary_df"
+   ]
   }
  ],
  "metadata": {
